правки + секция водный автÑпÑÐпатруль

--- a/src/index.html
+++ b/src/index.html
@@ -598,6 +598,53 @@
             </div>
         </section>
 
+        <section class="water_patrol">
+            <div class="container_main">
+                <div class="water_patrol_grid-wrapper">
+                    <div class="water_patrol_title">
+                        <h1 class="water_patrol-title title"><span class="water_patrol-animation-1">водный</span> <span class="water_patrol-animation-2">патруль</span></h1>
+                    </div>
+                    <div class="water_patrol_card">
+                        <a class="garage_model_card" href="./pages/amarok.html">
+                            <div class="slid_img">
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                            </div>
+                            <div class="slid_info">
+                                <div class="slid_info-desc">
+                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>
+                                    <p class="slid_info-text">Патрульный пикап</p>
+                                </div>
+                                <div class="slid_info-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                            <rect width="18" height="18" fill="#D9D9D9"/>
+                                        </mask>
+                                        <g mask="url(#mask0_1137_313)">
+                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="water_patrol_history">
+                        <div class="water_patrol_history_top">
+                            <p class="water_patrol_history-title">Водный патруль ЦОДД начал свою работу весной 2022 года.</p>
+                            <p class="water_patrol_history-text">Зеленый катер ежедневно патрулирует акваторию города.</p>
+                        </div>
+                        <p class="water_patrol_history-text">В его задачи входит фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории, оперативное взаимодействие с&nbsp;контрольно-надзорными и&nbsp;правоохранительными органами, проведение профилактических бесед о&nbsp;правилах поведения на&nbsp;воде.</p>
+                    </div>
+                    <div class="water_patrol_text_1">
+                        <p class="water_patrol-text">У каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                    </div>
+                    <div class="water_patrol_text_2">
+                        <p class="water_patrol-text">За прошлый летний сезон Водный патруль прошел 18 тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100 нарушений.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="help_desk" id="help_desk">
             <div class="container_main">
                 <div class="help_desk_grid-wrapper">
