--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -103,7 +103,7 @@
         <div id="hellopreloader_barWrapper">
             <progress id="progress-bar" value="0" max="100"></progress>
         </div>
-        <label for="progress-bar">Загрузка...</label>
+        <label for="progress-bar" id="progress_text">Загрузка...</label>
     </div>
 </div>
 
