--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -107,7 +107,7 @@
         <div id="hellopreloader_barWrapper">
             <progress id="progress-bar" value="0" max="100"></progress>
         </div>
-        <label for="progress-bar">Загрузка...</label>
+        <label for="progress-bar" id="progress_text">Загрузка...</label>
     </div>
 </div>
 
@@ -226,7 +226,7 @@
             </div>
         </div>
     </section>
-    <div class="tech_spec__interior" id="solaris_green">
+    <div class="tech_spec__interior" id="solaris_gray">
         <div class="tech_spec__interior-btn">
             <span class="tech_spec__interior-text">В салон</span>
             <div class="arrow-wrapper">
