--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -108,7 +108,7 @@
         <div id="hellopreloader_barWrapper">
             <progress id="progress-bar" value="0" max="100"></progress>
         </div>
-        <label for="progress-bar">Загрузка...</label>
+        <label for="progress-bar" id="progress_text">Загрузка...</label>
     </div>
 </div>
 
@@ -237,7 +237,7 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/0prXYTTwTrmQUGP3xOBFVx" width="100%" height="100%"></iframe>
+<iframe src="https://app.vectary.com/p/2zkou5LI5mWhXqo06RLBTm" width="100%" height="100%"></iframe>
 
 <section class="auto_park">
     <div class="container">
