--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -258,11 +258,11 @@
                                 <img class="gallery_item-img" src="../img/layout/slider/ford.png" alt="ford">
                             </a>
                         </div>
-                        <div class="gallery_item">
-                            <a class="gallery_item_link" href="../pages/solaris.html">
-                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">
-                            </a>
-                        </div>
+<!--                        <div class="gallery_item">-->
+<!--                            <a class="gallery_item_link" href="../pages/solaris.html">-->
+<!--                                <img class="gallery_item-img" src="../img/layout/slider/solaris_green.png" alt="solaris">-->
+<!--                            </a>-->
+<!--                        </div>-->
                         <div class="gallery_item active">
                             <a class="gallery_item_link" href="#">
                                 <img class="gallery_item-img" src="../img/layout/slider/solaris_gray.png" alt="solaris">
@@ -337,7 +337,55 @@
     <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="173"></a-sky>
 </a-scene>
 
-<script src="../js/loader.js"></script>
+<!--<script src="../js/loader.js"></script>-->
+<script>
+    const LOADING_TIME = 18000;
+    const PERCENT_STEP = 5;
+    const COUNT_LOAD_TIME = LOADING_TIME / (100 / PERCENT_STEP);
+    let percent = 0;
+    let preloader = document.querySelector(".progress-bar");
+    const percentEl = document.getElementById("progress-label");
+    const barEl = document.getElementById("progress-bar");
+    let progressText = document.getElementById("progress_text");
+
+    function countLoad() {
+        barEl.style.width = "0%";
+        percentEl.textContent = `0%`;
+        let countInterval = setInterval(function () {
+            percent += PERCENT_STEP;
+            percentEl.textContent = `${percent}%`;
+            barEl.style.width = `${percent}%`;
+            if (percent >= 20 && percent < 45) {
+                progressText.textContent = 'Экипируемся...';
+            } else if (percent >= 45 && percent < 65) {
+                progressText.textContent = 'Проводим ТО...';
+            }else if (percent >= 65 && percent < 85) {
+                progressText.textContent = 'Моем машину...';
+            } else if (percent >= 85) {
+                progressText.textContent = 'Мы готовы!';
+            }
+            if (percent === 100) {
+                clearInterval(countInterval);
+                setTimeout(function () {
+                    fadeOutnojquery(preloader);
+                }, 100);
+            }
+        }, COUNT_LOAD_TIME);
+    }
+    function fadeOutnojquery(el) {
+        el.style.opacity = 1;
+        let interhellopreloader = setInterval(function () {
+            el.style.opacity = el.style.opacity - 0.05;
+
+            if (el.style.opacity <= 0.05) {
+                clearInterval(interhellopreloader);
+                preloader.style.display = "none";
+            }
+        }, 16);
+    }
+
+    countLoad();
+</script>
 <script>
     setTimeout(() => {
         let currentInfoPanel = null;
