--- a/src/index.html
+++ b/src/index.html
@@ -518,7 +518,7 @@
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Ситуационный центр ЦОДД</p>
-                                    <p class="slid_info-text">Ситуационный центр</p>
+                                    <p class="slid_info-text">Мобильный штаб</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -612,8 +612,8 @@
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
-                                    <p class="slid_info-title">Дорожный патруль ЦОДД</p>
-                                    <p class="slid_info-text">Патрульный пикап</p>
+                                    <p class="slid_info-title">Водный патруль ЦОДД</p>
+                                    <p class="slid_info-text">Патрульный катер</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
@@ -639,6 +639,10 @@
                         <p class="water_patrol-text">У каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                     </div>
                     <div class="water_patrol_text_2">
+                        <p class="water_patrol-text">За прошлый летний сезон Водный патруль прошел 18 тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100 нарушений.</p>
+                    </div>
+                    <div class="water_patrol_text_mobile">
+                        <p class="water_patrol-text">У каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                         <p class="water_patrol-text">За прошлый летний сезон Водный патруль прошел 18 тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100 нарушений.</p>
                     </div>
                 </div>
@@ -884,40 +888,40 @@
                         <p class="mobile_text_combo-text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о&nbsp;неполадках сообщают в&nbsp;ЦОДД.</p>
                         <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для помощи:</p>
                     </div>
+<!--                    <div class="slide-5">-->
+<!--                        <a class="garage_model_card" href="./pages/ford.html">-->
+<!--                            <div class="slid_img">-->
+<!--                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">-->
+<!--                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>-->
+<!--                            </div>-->
+<!--                            <div class="slid_info">-->
+<!--                                <div class="slid_info-desc">-->
+<!--                                    <p class="slid_info-title">Служба помощи ЦОДД</p>-->
+<!--                                    <p class="slid_info-text">Служба помощи</p>-->
+<!--                                </div>-->
+<!--                                <div class="slid_info-link">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">-->
+<!--                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">-->
+<!--                                            <rect width="18" height="18" fill="#D9D9D9"/>-->
+<!--                                        </mask>-->
+<!--                                        <g mask="url(#mask0_1137_313)">-->
+<!--                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>-->
+<!--                                        </g>-->
+<!--                                    </svg>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <div class="slide-5">
-                        <a class="garage_model_card" href="./pages/ford.html">
+                        <a class="garage_model_card" href="./pages/bus.html">
                             <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/ford.png" alt="Служба помощи">
-                                <video class="menu_preview-video" src="./img/video/ford.mp4" muted loop playsinline></video>
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/solaris_green.png" alt="Служба помощи ЦОДДр">
+                                <video class="menu_preview-video" src="./img/video/salaris.mp4" muted loop playsinline></video>
                             </div>
                             <div class="slid_info">
                                 <div class="slid_info-desc">
                                     <p class="slid_info-title">Служба помощи ЦОДД</p>
-                                    <p class="slid_info-text">Служба помощи</p>
-                                </div>
-                                <div class="slid_info-link">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
-                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
-                                            <rect width="18" height="18" fill="#D9D9D9"/>
-                                        </mask>
-                                        <g mask="url(#mask0_1137_313)">
-                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="slide-6">
-                        <a class="garage_model_card" href="./pages/bus.html">
-                            <div class="slid_img">
-                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/bus.png" alt="Ситуационный центр">
-                                <video class="menu_preview-video" src="./img/video/bus.mp4" muted loop playsinline></video>
-                            </div>
-                            <div class="slid_info">
-                                <div class="slid_info-desc">
-                                    <p class="slid_info-title">Ситуационный центр ЦОДД</p>
-                                    <p class="slid_info-text">Ситуационный центр</p>
+                                    <p class="slid_info-text">Патрульный седан</p>
                                 </div>
                                 <div class="slid_info-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
